--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.3.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -52,7 +54,6 @@
   },
   "devDependencies": {
     "@types/react-material-ui-form-validator": "^2.1.1",
-    "@types/react-router": "^5.1.16",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router": "^5.1.16"
   }
 }
